Add common helper method to clone mediapackage elements
Cloning mediapackage elements should also copy the file in the
workspace. Otherwise, operations performed on one file will affect
multiple mediapackage elements.